Fix the command accordingly

--- a/src/tasks.json
+++ b/src/tasks.json
@@ -1,23 +1,37 @@
 [
   {
     "id": 1,
-    "description": "Learn C++",
+    "description": "Learning C++ programming",
     "status": "todo",
-    "createdAt": "2024-10-01T02:19:49.177Z",
-    "updatedAt": "2024-10-01T02:19:49.177Z"
+    "createdAt": "10/02/2024, 11:16:30 PM",
+    "updatedAt": "10/02/2024, 11:16:30 PM"
   },
   {
     "id": 2,
-    "description": "Learn C#",
-    "status": "todo",
-    "createdAt": "Tue Oct 01 2024",
-    "updatedAt": "2024-10-01T02:22:25.294Z"
+    "description": "Learning C programming",
+    "status": "in-progress",
+    "createdAt": "10/02/2024, 11:16:41 PM",
+    "updatedAt": "10/02/2024, 11:22:49 PM"
   },
   {
     "id": 3,
-    "description": "Learn C",
+    "description": "Learning C# programming",
     "status": "todo",
-    "createdAt": "Tue Oct 01 2024",
-    "updatedAt": "10/1/2024"
+    "createdAt": "10/02/2024, 11:16:45 PM",
+    "updatedAt": "10/02/2024, 11:16:45 PM"
+  },
+  {
+    "id": 4,
+    "description": "Learning Rust  programming",
+    "status": "in-progress",
+    "createdAt": "10/02/2024, 11:16:51 PM",
+    "updatedAt": "10/02/2024, 11:23:04 PM"
+  },
+  {
+    "id": 5,
+    "description": "Research about the effectiveness of doing nothing",
+    "status": "done",
+    "createdAt": "10/02/2024, 11:17:13 PM",
+    "updatedAt": "10/02/2024, 11:21:32 PM"
   }
 ]
